objects/ACP_TE_Suppliers_Rating__c.object
<CustomObject>
    <description>Anushka 04/24/17 – Created for Account Plan</description>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>TE Suppliers Ratings</relationshipLabel>
        <relationshipName>TE_Supplier_Evaluations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Comments__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Relationship_Rating__c</fullName>
        <description>Anushka 04/24/17 – Created for Account Plan</description>
        <inlineHelpText>Enter TE Supplier Relationship Rating</inlineHelpText>
        <label>Relationship Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>Valuable Advisor</fullName>
                </value>
                <value>
                    <fullName>Problem Solver</fullName>
                </value>
                <value>
                    <fullName>Valuable Source</fullName>
                </value>
                <value>
                    <fullName>Transactional Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Unique_del__c</fullName>
        <label>Unique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACP_Year__c</fullName>
        <inlineHelpText>Year</inlineHelpText>
        <label>Year</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TE Suppliers Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>TE Suppliers Rating Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TE Suppliers Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>